--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,16 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# https://github.com/leunggeorge/leetcode.git
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+bin
+build-*
+obj
+Debug
+Release
+ipch
+*~
+.vs
+*.user
+*.sdf
+*.suo
+*.opensdf
+*.sln
+*.swp
